--- a/main.ipynb
+++ b/main.ipynb
@@ -2213,8 +2213,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "id": "3cfd0717",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = train_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "id": "68dcd56e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['Survived'] = [ math.floor(i) for i in data['Survived']]\n",
+    "data['Age'] = [ math.floor(i) for i in data['Age']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "7fc46ff1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Family_Size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>Mr</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>38</td>\n",
+       "      <td>C85</td>\n",
+       "      <td>C</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>Mrs</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>Miss</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35</td>\n",
+       "      <td>C123</td>\n",
+       "      <td>S</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>Mrs</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>373450</td>\n",
+       "      <td>Mr</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age Cabin Embarked     Fare  \\\n",
+       "0   22   NaN        S   7.2500   \n",
+       "1   38   C85        C  71.2833   \n",
+       "2   26   NaN        S   7.9250   \n",
+       "3   35  C123        S  53.1000   \n",
+       "4   35   NaN        S   8.0500   \n",
+       "\n",
+       "                                                Name  Parch  PassengerId  \\\n",
+       "0                            Braund, Mr. Owen Harris      0            1   \n",
+       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...      0            2   \n",
+       "2                             Heikkinen, Miss. Laina      0            3   \n",
+       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)      0            4   \n",
+       "4                           Allen, Mr. William Henry      0            5   \n",
+       "\n",
+       "   Pclass     Sex  SibSp  Survived            Ticket Title  Family_Size  \n",
+       "0       3    male      1         0         A/5 21171    Mr            1  \n",
+       "1       1  female      1         1          PC 17599   Mrs            1  \n",
+       "2       3  female      0         1  STON/O2. 3101282  Miss            0  \n",
+       "3       1  female      1         1            113803   Mrs            1  \n",
+       "4       3    male      0         0            373450    Mr            0  "
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8eb6cb35",
    "metadata": {},
    "outputs": [],
    "source": []
